<resources>
    <string name="app_name">OOmvelt</string>

    <string name="error_bt_connect_title">Could not connect</string>
    <string name="error_bt_connect_message">OOmvelt could not connect to the Bluetooth device %s.</string>
    <string name="error_bt_no_title">Bluetooth not found</string>
    <string name="error_bt_no_message">OOmvelt requires a Bluetooth adaptor. It does not seem that your phone has one.</string>
    <string name="error_bt_disabled_title">Bluetooth is disabled</string>
    <string name="error_bt_disabled_message">OOmvelt requires a Bluetooth connection. To use the application you need to enable Bluetooth..</string>
    <string name="main_bluetooth_setup">Choose Rat</string>
    <string name="main_bluetooth_read_start">Start reading</string>
    <string name="main_bluetooth_read_end">Stop reading</string>
    <string name="main_bluetooth_read_status">Saving to %s.</string>
    <string name="main_bluetooth_status_device">Will use Rat: %s.</string>
    <string name="main_bluetooth_status_none">No Rat selected.</string>
    <string name="main_bluetooth_rat_status">Rat status: %s.</string>
    <string name="main_marker_one">Mrk #1</string>
    <string name="main_marker_two">Mrk #2</string>
    <string name="main_marker_three">Mrk #3</string>
    <string name="main_marker_four">Mrk #4</string>
    <string name="main_marker_five">Mrk #5</string>
    <string name="main_bluetooth_devices_title">Available Bluetooth devices</string>
    <string name="main_bluetooth_devices_loading">Looking for nearby Bluetooth devices.</string>
    <string name="btlist_title">Bluetooth devices</string>
</resources>
