<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="0.12" />

    <TextView
        android:id="@+id/application_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1.0.0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        />

    <TextView
        android:id="@+id/bluetooth_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/rat_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|center"
      android:gravity="center_vertical|center"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/bluetooth_choose"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_bluetooth_setup"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

    <Button
        android:id="@+id/bluetooth_connect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_bluetooth_read_start"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|center"
      android:gravity="center_vertical|center"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/marker_one"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_marker_one"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

    <Button
        android:id="@+id/marker_two"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_marker_two"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

    <Button
        android:id="@+id/marker_three"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_marker_three"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

    <Button
        android:id="@+id/marker_four"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_marker_four"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />

    <Button
        android:id="@+id/marker_five"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/main_marker_five"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button"
        />
  </LinearLayout>

</LinearLayout>